<?xml version="1.0" encoding="utf-8"?>

<!--LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/main_id"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"     
>
	<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	>
		<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		>
			<ImageView
			android:id="@+id/clockimg"
			android:contentDescription="@string/hello"
			android:layout_height="60dip"
			android:layout_width="60dip"
			android:scaleType="center"   
			/>

			<TextView
		    android:id="@+id/line0"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@android:color/transparent"
		    android:maxLines="1"
		    android:paddingLeft="8dip"
		    android:paddingTop="6dip"
		    android:text="@string/line0text"
		    android:textColor="#FFFFFF"
		    android:textSize="42.0sp"
		    android:gravity="left|bottom"
		    android:layout_gravity="left|bottom" 
		    />

		</LinearLayout>	    

		<ImageView
		android:contentDescription="@string/hello"
		android:id="@+id/div"
		android:layout_height="0dip"
		android:layout_width="fill_parent"
		android:scaleType="fitStart"
		android:paddingLeft="12dip"
		/>
	</LinearLayout>
		  
	
	
	<LinearLayout
	android:layout_marginTop="20dip"	    
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line11text"   
	    android:textSize="28.0sp"
	    android:textStyle="bold"
	    android:maxLines="1"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:id="@+id/line11"/>
		 
	    <TextView  
		android:id="@+id/line12"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line12text"   
	    android:textSize="28.0sp"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    />
	</LinearLayout>
	

	<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:id="@+id/line21"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line21text"   
	    android:maxLines="1"
	    android:textSize="28.0sp"
	    android:textStyle="bold"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    />   
		
	    <TextView  
	    android:maxLines="1"
		android:id="@+id/line22"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line22text"   
	    android:textSize="28.0sp"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:ellipsize="marquee"
	    />
	</LinearLayout>
	
	<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:id="@+id/line31"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line31text"   
	    android:maxLines="1"
	    android:textSize="28.0sp"
	    android:textStyle="bold"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    />   
		
	    <TextView  
	    android:maxLines="1"
		android:id="@+id/line32"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line32text"  
	    android:textSize="28.0sp"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    />
	</LinearLayout>			
</LinearLayout-->


<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/main_id"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"     
>
	<LinearLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	>
		<ImageView
		android:id="@+id/clockimg"
		android:contentDescription="@string/hello"
		android:layout_height="60dip"
		android:layout_width="60dip"
		android:scaleType="fitCenter"   
		/>

		<TextView
	    android:id="@+id/line0"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/transparent"
	    android:maxLines="1"
	    android:paddingLeft="8dip"
	    android:ellipsize="middle"
	    android:paddingTop="6dip"
	    android:textSize="38.0sp"
	    android:text="@string/line0text"
	    android:textColor="#FFFFFF"
	    android:gravity="left|bottom"
	    android:layout_gravity="left|bottom" 
	    />

	</LinearLayout>	    
	
	
	<LinearLayout
	android:layout_marginTop="20dip"
	android:layout_height="0dip"
	android:layout_width="fill_parent"
	android:layout_weight="0.3"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line11text"   
	    android:textStyle="bold"
	    android:maxLines="1"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:id="@+id/line11"
	    android:textSize="28.0sp"
	    />
		 
	    <TextView  
		android:id="@+id/line12"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line12text"   
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:textSize="28.0sp"
	    />
	</LinearLayout>
	

	<LinearLayout
	android:layout_height="0dip"
	android:layout_width="fill_parent"
	android:layout_weight="0.3"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:id="@+id/line21"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line21text"   
	    android:maxLines="1"
	    android:textStyle="bold"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:textSize="28.0sp"
	    />   
		
	    <TextView  
	    android:maxLines="1"
		android:id="@+id/line22"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line22text"   
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:ellipsize="marquee"
	    android:textSize="28.0sp"
	    />
	</LinearLayout>
	
	<LinearLayout
	android:layout_height="0dip"
	android:layout_width="fill_parent"
	android:layout_weight="0.3"
	android:orientation="horizontal"
	>
		<TextView  
		android:background="@android:color/transparent"
		android:id="@+id/line31"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line31text"   
	    android:maxLines="1"
	    android:textStyle="bold"
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:textSize="28.0sp"
	    />   
		
	    <TextView  
	    android:maxLines="1"
		android:id="@+id/line32"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/line32text"  
	    android:textColor="#FFFFFF"
	    android:gravity="left"
	    android:textSize="28.0sp"
	    />
	</LinearLayout>			
</LinearLayout>